--- a/index.html
+++ b/index.html
@@ -46,22 +46,24 @@ layout: default
 </section>
 
 <section class="explore-flow-type grid-x cell">
-  <a href="">
+  <a href="#">
     <h2 class="cell">Explore Flow Types <i class="fa-solid fa-chevron-right"></i></h2>
   </a>
   <!-- TODO show the featured flow types here -->
   <div class="grid-x cell explore-flow-type-item-wrapper grid-margin-x">
   {%- for flow-type in site.data.flow-type -%}
     {% if flow-type.featured == true %}
-      <div class="flow-tile cell grid-x medium-4">
+    <a href="#" class="cell grid-x medium-4 flow-tile-link-wrapper">
+      <div class="flow-tile cell grid-x">
         <div class="icon-container cell grid-x align-center align-middle">
           {{ flow-type.icon }}
         </div>
         <div class="text-section cell grid-x align-middle align-justify">
-          <p class="cell auto name">{{ flow-type.name }}</p>
-          <p class="cell shrink number-of">12 flows</p>
+          <span class="cell auto name">{{ flow-type.name }}</span>
+          <span class="cell shrink number-of">12 flows</span>
         </div>
       </div>
+    </a>
     {% endif %}
   {%- endfor -%}
   </div>
