RSS styling update

--- a/index.html
+++ b/index.html
@@ -70,4 +70,4 @@ layout: default
 </section>
 
 <!-- TODO don't forget about updating the RSS feed -->
-<p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+<p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS <i class="fa-solid fa-rss"></i></a></p>
