--- a/index.html
+++ b/index.html
@@ -49,18 +49,19 @@ layout: default
   <a href="#">
     <h2 class="cell">Explore Flow Types <i class="fa-solid fa-chevron-right"></i></h2>
   </a>
-  <!-- TODO show the featured flow types here -->
-  <div class="grid-x cell explore-flow-type-item-wrapper grid-margin-x">
+  <div class="grid-x cell explore-flow-type-item-wrapper">
   {%- for flow-type in site.data.flow-type -%}
     {% if flow-type.featured == true %}
     <a href="#" class="cell grid-x medium-4 flow-tile-link-wrapper">
-      <div class="flow-tile cell grid-x">
-        <div class="icon-container cell grid-x align-center align-middle">
-          {{ flow-type.icon }}
-        </div>
-        <div class="text-section cell grid-x align-middle align-justify">
-          <span class="cell auto name">{{ flow-type.name }}</span>
-          <span class="cell shrink number-of">12 flows</span>
+      <div class="cell grid-x spacer">
+        <div class="flow-tile cell grid-x">
+          <div class="icon-container cell grid-x align-center align-middle">
+            {{ flow-type.icon }}
+          </div>
+          <div class="text-section cell grid-x align-middle align-justify">
+            <span class="cell auto name">{{ flow-type.name }}</span>
+            <span class="cell shrink number-of">12 flows</span>
+          </div>
         </div>
       </div>
     </a>
