--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
 <section class="recently-added grid-x cell">
   <h2 class="cell">Recently Added Flows</h2>
   {% assign flow_order = site.workflows | sort: 'date' | reverse %}
-  <div class="grid-x cell recently-added-item-wrapper">
+  <div class="grid-x cell recently-added-item-wrapper mini-card-wrapper">
   {%- for flow in flow_order limit:6 -%}
     <a href="{{ flow.url| prepend: site.baseurl }}" class="grid-x cell small-12 medium-4">
       {% assign app = site.data.apps[flow.application] %}
@@ -46,6 +46,7 @@ layout: default
 
 <section class="explore-flow-type grid-x cell">
   <a href="#">
+    <!-- TODO style this better -->
     <h2 class="cell">Explore Flow Types <i class="fa-solid fa-chevron-right"></i></h2>
   </a>
   <div class="grid-x cell explore-flow-type-item-wrapper">
