--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
   {%- for flow in flow_order limit:6 -%}
     <a href="{{ flow.url| prepend: site.baseurl }}" class="grid-x cell small-12 medium-4">
       {% assign app = site.data.apps[flow.application] %}
-      {% assign app-name = app.name | replace: ' ', '-' %}
+      {% assign app-name = app.name | replace: ' ', '-' | downcase %}
       <div class="workflow-mini-card grid-x cell align-justify align-middle {{ app-name }}">
         <div class="cell auto grid-x align-middle">
           <img src="../img/icons/{{ app.icon }}" alt="Application icon for {{flow.application}}">
