--- a/index.html
+++ b/index.html
@@ -52,16 +52,17 @@ layout: default
     </a>
   </a>
   <div class="grid-x cell explore-flow-type-item-wrapper">
-  {% for flow-type in site.data.flow-type %}
-    {% if flow-type[1].featured == true %}
-    <a href="#" class="cell grid-x medium-4 flow-tile-link-wrapper">
+  {% for flow-type in site.flow-types %}
+    {% if flow-type.featured == true %}
+    <a href="{{flow-type.url}}" class="cell grid-x medium-4 flow-tile-link-wrapper">
       <div class="cell grid-x spacer">
         <div class="flow-tile cell grid-x">
           <div class="icon-container cell grid-x align-center align-middle">
-            {{ flow-type[1].icon }}
+            {{ flow-type.icon }}
           </div>
           <div class="text-section cell grid-x align-middle align-justify">
-            <span class="cell auto name">{{ flow-type[1].name }}</span>
+            <span class="cell auto name">{{ flow-type.name }}</span>
+            <!-- TODO update this number with a real number -->
             <span class="cell shrink number-of">12 flows</span>
           </div>
         </div>
