--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ layout: default
     <a href="{{ flow.url| prepend: site.baseurl }}" class="grid-x cell small-12 medium-4">
       {% assign app = site.data.apps[flow.application] %}
       {% assign app-name = app.name | replace: ' ', '-' | downcase %}
+      <!-- relates to #10 -->
       <div class="workflow-mini-card grid-x cell align-justify align-middle {{ app-name }}">
         <div class="cell auto grid-x align-middle">
           <img src="../img/icons/{{ app.icon }}" alt="Application icon for {{flow.application}}">
