--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@ layout: default
 </section>
 
 <section class="explore-flow-type grid-x cell">
-  <a href="#">
-    <!-- TODO style this better -->
-    <a href="{% link flow-types.md %}">
-      <h2 class="cell">Explore Flow Types <i class="fa-solid fa-chevron-right"></i></h2>
-    </a>
+  <a class="header-link" href="{% link flow-types.md %}">
+    <h2 class="grid-x cell">
+      <span class="cell shrink">Explore Flow Types</span>
+      <div class="cell shrink icon-wrapper">
+        <i class="fa-solid fa-chevron-right"></i>
+      </div>
+    </h2>
   </a>
   <div class="grid-x cell explore-flow-type-item-wrapper">
   {% for flow-type in site.flow-types %}
