--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@ layout: default
       <!-- relates to #10 -->
       <div class="workflow-mini-card grid-x cell align-justify align-middle {{ app-name }}">
         <div class="cell auto grid-x align-middle">
-          <img src="../img/icons/{{ app.icon }}" alt="Application icon for {{flow.application}}">
-          <p class="title">{{flow.title}}</p>
+          <div class="cell shrink">
+            <img src="../img/icons/{{ app.icon }}" alt="Application icon for {{flow.application}}">
+          </div>
+          <div class="cell auto">
+            <p class="title">{{flow.title}}</p>
+          </div>
         </div>
         <div class="cell shrink icon-container">
           <i class="fa-solid fa-video"></i>
